# opencat

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_ZH.md  Cargo.toml  DEVELOPMENT.md  DEVELOPMENT_ZH.md  README.md  README_ZH.md  app-review.jsonl  build.rs  foodie-promo.jsonl  gltransition.json  implementation-notes.md  layout.md  opencat.md  opencat.zh.md  pendulum_lesson_v2.jsonl  tree_growth.jsonl
crates/opencat/: Cargo.toml  build.rs
crates/opencat-core/: Cargo.toml  build.rs
crates/opencat-core/src/: fonts.rs  frame_ctx.rs  lib.rs  lottie.rs  style.rs  test_support.rs
crates/opencat-core/src/analyze/: annotation.rs  compositor.rs  invalidation.rs  mod.rs
crates/opencat-core/src/analyze/fingerprint/: display_item.rs  mod.rs
crates/opencat-core/src/cache/: lru.rs
crates/opencat-core/src/canvas/: glyph.rs  mod.rs  paint.rs  runtime_effect.rs
crates/opencat-core/src/display/: build.rs  list.rs  mod.rs  tree.rs
crates/opencat-core/src/draw/: builder.rs  cache.rs  encoding.rs  frame.rs  mod.rs  op.rs  types.rs
crates/opencat-core/src/element/: mod.rs  resolve.rs  style.rs  tree.rs
crates/opencat-core/src/ir/: asset_id.rs  cache.rs  composition_info.rs  draw_encoding.rs  draw_frame.rs  draw_op.rs  draw_types.rs  generated_image.rs  media_plan.rs  mod.rs  schema_gen.rs
crates/opencat-core/src/jsonl/: builder.rs  mod.rs  tailwind.rs
crates/opencat-core/src/layout/: mod.rs  tree.rs
crates/opencat-core/src/lifecycle/: mod.rs  types.rs
crates/opencat-core/src/media/: audio_plan.rs  codec.rs  export.rs  mod.rs  preview.rs  seek.rs  types.rs
crates/opencat-core/src/parse/: composition.rs  document.rs  easing.rs  gl_transition.rs  gradient.rs  lint.rs  markup.rs  mod.rs  node.rs  preflight.rs  time.rs  transition.rs
crates/opencat-core/src/parse/document/: builder.rs
crates/opencat-core/src/parse/jsonl/: builder.rs  mod.rs  tailwind.rs
crates/opencat-core/src/pipeline/: default.rs  frame.rs  inspect.rs  mod.rs
crates/opencat-core/src/platform/: backend.rs  draw.rs  frame_consumer.rs  media.rs  mod.rs  platform.rs  render_engine.rs  resource.rs  scene_snapshot.rs  video.rs
crates/opencat-core/src/probe/: catalog.rs  mod.rs  prepare.rs  probe.rs
crates/opencat-core/src/profile/: aggregator.rs  layer.rs  mod.rs  output.rs
crates/opencat-core/src/render/: bitmap.rs  builder.rs  cache.rs  ctx.rs  dispatch.rs  display_item.rs  display_tree.rs  draw_script.rs  helpers.rs  media_plan.rs  mod.rs  paint_conv.rs  rect.rs  script_conv.rs  state.rs  svg_path.rs  text.rs  timeline.rs  transition.rs
crates/opencat-core/src/resolve/: mod.rs  path_bounds.rs  resolve.rs  style.rs  tree.rs
crates/opencat-core/src/resource/: asset_catalog.rs  asset_id.rs  bitmap_source.rs  blob_store.rs  catalog.rs  fonts.rs  hash_map_catalog.rs  host_bridge.rs  lottie.rs  manifest.rs  materialize.rs  mod.rs  path_store.rs  preload.rs  preload_lottie.rs  probe.rs  protocol.rs  resolver.rs  types.rs
crates/opencat-core/src/runtime/: analysis.rs  annotation.rs  mod.rs  pipeline.rs  preflight_collect.rs  session.rs
crates/opencat-core/src/scene/: composition.rs  easing.rs  gl_transition.rs  mod.rs  node.rs  path_bounds.rs  time.rs  transition.rs
crates/opencat-core/src/script/: bindings.rs  dispatch.rs  helpers.rs  host.rs  js_context.rs  live_host.rs  mod.rs  mutations.rs  precomputed_host.rs  realm.rs  runtime_cache.rs  script_runner.rs  text_units.rs
crates/opencat-core/src/semantic/: fingerprint.rs
crates/opencat-core/src/text/: mod.rs
crates/opencat-core/src/time/: convert.rs  mod.rs  types.rs
crates/opencat-core/tests/: core_purity.rs
crates/opencat-engine/: Cargo.toml
crates/opencat-engine/src/: audio_plan.rs  backend.rs  consumer.rs  fonts.rs  js_context.rs  jsonl_io.rs  lib.rs  pipeline.rs  probe.rs  render.rs  script.rs  source_io.rs
crates/opencat-engine/src/codec/: decode.rs  encode.rs
crates/opencat-engine/src/executor/: mod.rs  paint.rs  path.rs  replay.rs
crates/opencat-engine/src/inspect/: browser.rs  browser_layout_tests.rs  mod.rs  web_frame_oracle_tests.rs
crates/opencat-engine/src/media/: audio.rs  decode.rs  encode.rs  mod.rs  prepare.rs  seek.rs  video.rs  video_cache.rs
crates/opencat-engine/src/platform/: audio_runtime.rs  mod.rs
crates/opencat-engine/src/resource/: asset_catalog.rs  fetch.rs  loader.rs  media.rs  mod.rs  path_store.rs  probe.rs  resolver.rs  utils.rs
crates/opencat-engine/src/runtime/: audio.rs  frame_view.rs  mod.rs  path_bounds.rs  pipeline.rs  preflight.rs  render_engine.rs  render_registry.rs  resolve_tests.rs  script_runtime_tests.rs  session.rs  surface.rs  target.rs
crates/opencat-engine/src/script/: driver_tests.rs  mod.rs
crates/opencat-engine/testsupport/: compile_tailwind_css.mjs  package.json
crates/opencat-player/: Cargo.toml
crates/opencat-player/src/: main.rs
crates/opencat-test-golden/: Cargo.toml
crates/opencat-test-golden/src/: main.rs
crates/opencat-web/: Cargo.toml  fetch_bridge.js  package-lock.json  package.json
crates/opencat-web/src/: backend.rs  consumer.rs  engine.rs  js_context.rs  lib.rs  platform.rs  recorder.rs  script.rs  source.rs  video.rs  wasm_bridge.rs  wasm_entry.rs
crates/opencat-web/src/canvaskit/: bindings.rs  canvas2d.rs  convert.rs  handle.rs  mod.rs  module.rs  paint.rs
crates/opencat-web/src/codec/: audio.rs  faac.rs  mod.rs
crates/opencat-web/src/media/: audio.rs  mod.rs
crates/opencat-web/src/resource/: asset_reader.rs  blob_store.rs  fetch.rs  font_store.rs  mod.rs  provider_store.rs  resolver.rs  wasm_api.rs
crates/opencat-web/tests/: smoke.rs
crates/opencat-web/web/: .gitignore  BUILD.md  package-lock.json  package.json  tsconfig.build.json  vite.config.ts
crates/opencat-web/web/src/: draw-ir.ts  exporter.ts  fonts.ts  index.ts  pkg.d.ts  resource-provider.ts  types.ts  video-decoder.ts  video-frame-injector.ts  wasm.ts
crates/opencat/examples/: pendulum_canvas.rs  slide_transition.rs  typewriter_canvas.rs  video_playback.rs
crates/opencat/src/: lib.rs  render.rs
crates/opencat/src/host/: jsonl_io.rs  mod.rs
docs/: MIGRATION.md  (+6 more)
(+579 files in other folders)
