[package]
name = "opencat"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0"
ffmpeg-next = "8.1.0"
skia-safe = { version = "0.93.1", features = ["textlayout"] }
taffy = "0.10.0"
image = "0.25.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rquickjs = { version = "0.11.0", features = ["futures"] }
