[package]
name = "opencat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ffmpeg-next = "8.1.0"
taffy = "0.10.0"
image = "0.25.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rquickjs = { version = "0.11.0", features = ["futures"] }
num_cpus = "1.17.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
dirs = "6.0.0"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "fs"] }
winit = "0.28.7"
raw-window-handle = "0.5.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
skia-safe = { version = "0.93.1", features = ["textlayout", "binary-cache", "gl"] }


[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
rodio = "0.22.2"

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.5.0"
metal = "0.31.0"
skia-safe = { version = "0.93.1", features = ["textlayout", "metal", "binary-cache"] }
core-graphics-types = "0.1.3"
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
] }

ahash = "0.8"
