[package]
name = "opencat-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
taffy = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
kurbo = "0.11"
rustc-hash = "2.1"
unicode-segmentation = "1.11"
cosmic-text = "0.12"
fontdb = "0.16"

[features]
default = []
test-support = []
