[package]
name = "opencat-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
taffy = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
hashbrown = "0.17"
kurbo = "0.13.1"
unicode-segmentation = "1.11"
cosmic-text = "0.19.0"
fontdb = "0.23.0"
imagesize = "0.14"
nom-exif = "3.4.1"
url = "2.5"
bumpalo = "3.20.2"
log = "0.4"
roxmltree = "0.21.1"

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry"]
optional = true

[features]
default = []
test-support = []
profile = ["tracing", "tracing-subscriber"]

[dev-dependencies]
tempfile = "3"
