[package]
name = "opencat-engine"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["host-default"]
host-default = ["host-codec", "host-script-quickjs", "host-resource-net", "host-backend-skia", "host-audio"]
host-codec = ["dep:ffmpeg-next"]
host-script-quickjs = ["dep:rquickjs"]
host-resource-net = ["dep:reqwest", "dep:tokio"]
host-backend-skia = ["dep:skia-safe"]
host-audio = []

[dependencies]
opencat-core = { path = "../opencat-core" }
anyhow = "1.0"
taffy = "0.10.0"
image = "0.25.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
rustc-hash = "2.1"
unicode-segmentation = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
num_cpus = "1.17.0"
cosmic-text = "0.12"
fontdb = "0.16"
dirs = "6.0.0"

ffmpeg-next = { version = "8.1.0", optional = true }
rquickjs = { version = "0.11.0", features = ["futures"], optional = true }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "socks"], optional = true }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "fs"], optional = true }

[dev-dependencies]
opencat-core = { path = "../opencat-core", features = ["test-support"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
skia-safe = { version = "0.93.1", features = ["binary-cache", "gl"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.5.0"
metal = "0.31.0"
skia-safe = { version = "0.93.1", features = ["metal", "binary-cache"], optional = true }
core-graphics-types = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
] }
