[package]
name = "opencat-engine"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
opencat-core = { path = "../opencat-core" }
anyhow = "1.0"
taffy = "0.10.0"
image = "0.25.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
rustc-hash = "2.1"
unicode-segmentation = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
num_cpus = "1.17.0"
cosmic-text = "0.12"
fontdb = "0.16"
dirs = "6.0.0"

ffmpeg-next = "8.1.0"
rquickjs = { version = "0.11.0", features = ["futures"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "socks"] }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "fs"] }

[dev-dependencies]
opencat-core = { path = "../opencat-core", features = ["test-support"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
skia-safe = { version = "0.93.1", features = ["binary-cache", "gl"] }

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.5.0"
metal = "0.31.0"
skia-safe = { version = "0.93.1", features = ["metal", "binary-cache"] }
core-graphics-types = "0.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
] }
