[package]
name = "opencat-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
opencat = { path = "../.." }
foreign-types = "0.5.0"
core-graphics-types = "0.1.3"
metal = "0.31.0"
skia-safe = { version = "0.93.1", features = ["metal"] }
winit = "0.28.7"
raw-window-handle = "0.5.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
rodio = "0.22.2"
