[package]
name = "opencat-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
opencat = { path = "../.." }
winit = "0.28.7"
raw-window-handle = "0.5.2"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
rodio = "0.22.2"

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.5.0"
core-graphics-types = "0.1.3"
metal = "0.31.0"
skia-safe = { version = "0.93.1", features = ["metal"] }
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
skia-safe = { version = "0.93.1", features = ["gl"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
] }
