[package]
name = "opencat-test-golden"
version.workspace = true
edition.workspace = true

[dependencies]
opencat-core = { path = "../opencat-core" }
opencat-engine = { path = "../opencat-engine" }
anyhow = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
