[package]
name = "opencat-web"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
opencat-core = { path = "../opencat-core" }
fontdb = "0.23.0"
faac-rs = { path = "../faac" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
# Host-owned resource probing (issue #40)
imagesize = "0.14"
nom-exif = "3.4.2"
url = "2.5"
once_cell = "1"
tracing = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
tracing-wasm = { version = "0.2", optional = true }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Request", "RequestInit", "RequestMode", "Response", "Window",
    "AudioContext", "AudioContextOptions", "AudioBuffer", "AudioBufferSourceNode",
    "AudioNode", "AudioParam", "AudioDestinationNode", "GainNode", "AudioScheduledSourceNode",
    "Blob", "Url", "console",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

[features]
profile = ["opencat-core/profile", "tracing", "dep:tracing-wasm"]
