[package]
name = "opencat"
version.workspace = true
edition.workspace = true

[features]
default = ["host-default"]
host-default = ["host-codec", "host-script-quickjs", "host-resource-net", "host-backend-skia", "host-audio"]
host-codec = ["opencat-engine/host-codec"]
host-script-quickjs = ["opencat-engine/host-script-quickjs"]
host-resource-net = ["opencat-engine/host-resource-net"]
host-backend-skia = ["opencat-engine/host-backend-skia"]
host-audio = ["opencat-engine/host-audio"]

[dependencies]
opencat-core = { path = "../opencat-core" }
opencat-engine = { path = "../opencat-engine" }

anyhow = "1.0"
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
winit = "0.28.7"
raw-window-handle = "0.5.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "opencat"
path = "src/bin/opencat.rs"

[[bin]]
name = "opencat-see"
path = "src/bin/opencat-see.rs"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
rodio = "0.22.2"

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.5.0"
metal = "0.31.0"
core-graphics-types = "0.1.3"
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
] }
